# fsocket

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  LICENSES  Makefile  Makefile.am  README  README.md  abi_version.sh  autogen.sh  configure.ac  contributors.txt  fcat  libfsock.pc  libfsocket.pc.in  package_version.sh
doc/: README  fsocket.txt
example/: example.c
examples/: Makefile  basic  basic.c  bench-client  bench-client.c  bench-server  bench-server.c  client  client.c  server  server.c  test-client  test-server
include/: fsocket.h
perf/: local_lat.c  local_thr.c  perf_ex.c  perf_pubsub  perf_pubsub.c  perf_thr.c  remote_lat.c  remote_thr.c
src/: CMakeLists.txt  Makefile  ctx.c  ctx.h  debug.h  frame.c  frame.h  fs_internal.h  fsock.h  fsocket.c  fsocket.h  fstream.c  io_handlers.c  io_handlers.h  light-lock.h  parser.c  parser.h  pipe.c  pipe.h  pkgconfig.in  stream.c  stream.h  test-client  test-client.c  test-server  test-server.c  types.h  zmalloc.c
src/core/: global.c  global.h  sock.c  sock.h
src/fsocket/: anet.h  fsocket.h  fstream.h  sds.h
src/utils/: adlist.c  adlist.h  anet.c  buffer.c  buffer.h  common.h  debug.h  efd.c  efd.h  efd_win.inc  err.c  err.h  glock.c  glock.h  mutex.c  mutex.h  parr.c  parr.h  priolist.c  priolist.h  queue.c  queue.h  thread.c  thread.h  util.c  util.h  worker.c  worker.h  zmalloc.h
tests/: README  feature1.c
tools/: fcat.c
